the images is fix height and floating to right

--- a/resources/assets/sass/components/home/_permanent.sass
+++ b/resources/assets/sass/components/home/_permanent.sass
@@ -54,7 +54,8 @@
                 margin: 0% !important
                 margin-bottom: 5% !important
                 img
-                    width: 100%
+                    height: 500px
+                    float: right
             .row_2
                 padding: 5% 8%
                 width: 100%
