In poermanents works accommodate the images and the text for more visibility

--- a/resources/assets/sass/components/home/_exposition.sass
+++ b/resources/assets/sass/components/home/_exposition.sass
@@ -134,6 +134,9 @@
                     .ocult
                         @media screen and (max-width: 600px)
                             display: none
+                        h2 
+                            font-size: 20px
+                            text-align: justify
                     tr
                         border: none
                         @media screen and (max-width: 600px)
@@ -150,12 +153,12 @@
                     h2
                         margin: 0% 0%
                         margin-top: 3%
-                        height: 35px
+                        height: 50px
                         line-height: initial
                         letter-spacing: 0px
                         text-align: left
                         padding-left: 20%
-                        font-size: 18px
+                        font-size: 30px
                         font-weight: 500
                         color: $color-secundario
                         @media screen and (max-width: 600px)
