in service is modifed for new presentation

--- a/resources/assets/sass/components/home/_services.sass
+++ b/resources/assets/sass/components/home/_services.sass
@@ -24,7 +24,7 @@
                 text-align: center
                 font-size: 30px
             span
-                font-weight: 700
+                font-weight: 700 //here
             hr
                 margin: 2% 0%
                 width: 20%
@@ -51,8 +51,8 @@
                 margin-left: initial
             .column
                 -webkit-box-flex: 0
-                -ms-flex: 0 0 50%
-                flex: 0 0 50%
+                -ms-flex: 0 0 20%
+                flex: 0 0 20%
                 margin-bottom: 4% !important
                 padding: 0% 1% !important
                 @media screen and (max-width: 600px)
@@ -96,3 +96,8 @@
                 font-weight: 300
                 margin: 0%
                 margin-top: 5%
+.card 
+    .card-title
+        font-size:60px
+        span
+            font-weight: 700
