--- a/resources/assets/sass/components/home/_info.sass
+++ b/resources/assets/sass/components/home/_info.sass
@@ -3,7 +3,7 @@
     padding: 3% 0%
     .rowOne
         width: 90%
-        margin-bottom: 0%
+        margin-bottom: 30px
         .element
             width: 100%
             padding: 0% 2%
@@ -43,3 +43,20 @@
                 font-size: 16px
                 font-weight: 300
                 color: $color-secundario
+        h1
+            margin: 0%
+            font-size: 60px
+            font-weight: 500
+            color: $color-secundario
+            text-align: center
+            @media screen and (max-width: 600px)
+                font-size: 30px
+            span
+                font-weight: 700
+            hr
+                width: 20%
+                height: 3px
+                background: $color-principal
+                border: none
+                margin: auto
+                margin-top: 10px
