adding catalogos in the page

--- a/resources/assets/sass/components/home/_info.sass
+++ b/resources/assets/sass/components/home/_info.sass
@@ -60,3 +60,8 @@
                 border: none
                 margin: auto
                 margin-top: 10px
+        .img
+            .catalogo
+                height: 1000px
+
+
