adding banner for the notes and publish

--- a/resources/assets/sass/components/home/_info.sass
+++ b/resources/assets/sass/components/home/_info.sass
@@ -63,5 +63,16 @@
         .img
             .catalogo
                 height: 1000px
+            .bannerForThreeImages
+                width: 100%
+    .hr
+        hr
+            width: 20%
+            height: 3px
+            background: $color-principal
+            border: none
+            margin: auto
+            margin-top: 10px
+
 
 
