addint tags for vides

--- a/resources/assets/sass/components/home/_info.sass
+++ b/resources/assets/sass/components/home/_info.sass
@@ -65,6 +65,8 @@
                 height: 1000px
             .bannerForThreeImages
                 width: 100%
+            video
+                width: 100%
     .hr
         hr
             width: 20%
