--- a/resources/assets/sass/components/home/_gallery.sass
+++ b/resources/assets/sass/components/home/_gallery.sass
@@ -129,6 +129,8 @@
                 -ms-flex: 0 0 40%
                 flex: 0 0 40%
                 padding: 1% 0%
+                display: flex
+                align-items: center
                 @media screen and (max-width: 600px)
                     -ms-flex: 0 0 100%
                     flex: 0 0 100%
