--- a/resources/assets/sass/components/home/_exposition.sass
+++ b/resources/assets/sass/components/home/_exposition.sass
@@ -135,7 +135,7 @@
                         @media screen and (max-width: 600px)
                             display: none
                         h2 
-                            font-size: 20px
+                            font-size: 30px
                             text-align: justify
                     tr
                         border: none
@@ -153,7 +153,7 @@
                     h2
                         margin: 0% 0%
                         margin-top: 3%
-                        height: 50px
+                        height: 70px
                         line-height: initial
                         letter-spacing: 0px
                         text-align: left
@@ -161,6 +161,8 @@
                         font-size: 30px
                         font-weight: 500
                         color: $color-secundario
+                        display: flex
+                        align-items: center
                         @media screen and (max-width: 600px)
                             height: auto
                             padding-left: 0%
