--- a/resources/assets/sass/components/home/_permanent.sass
+++ b/resources/assets/sass/components/home/_permanent.sass
@@ -52,6 +52,10 @@
                 width: 100%
                 margin: 0% !important
                 margin-bottom: 5% !important
+                .imgcenter
+                    display: flex
+                    justify-content: center
+                    align-items: center
                 img
                     height: 550px
                     float: right
