--- a/resources/assets/sass/components/home/_gallery.sass
+++ b/resources/assets/sass/components/home/_gallery.sass
@@ -128,6 +128,7 @@
                 padding: 1% 0%
                 display: flex
                 align-items: center
+                justify-content: center
                 @media screen and (max-width: 600px)
                     -ms-flex: 0 0 100%
                     flex: 0 0 100%
