--- a/resources/assets/sass/components/home/_about.sass
+++ b/resources/assets/sass/components/home/_about.sass
@@ -103,9 +103,11 @@
     width: 100%
     .h3
         height: 350px
+    .processSecond
+        margin-top: 70px
     .image
-        width: 80% !important
-        margin-left: 10% !important
+        width: 100% !important
+        margin-left: 0% !important
         @media screen and (max-width: 600px)
             width: 100% !important
             margin-left: 0% !important
