terminando con el mostrado de la galeria

--- a/resources/assets/sass/components/home/_gallery.sass
+++ b/resources/assets/sass/components/home/_gallery.sass
@@ -76,6 +76,8 @@
                     margin-top: 10px
                 &:hover
                     cursor: pointer
+                .bigBit
+                    font-size: 30px
             .active
                 hr
                     visibility: inherit
