Gallery is completed; books is completed; category is added

--- a/resources/assets/sass/components/home/_gallery.sass
+++ b/resources/assets/sass/components/home/_gallery.sass
@@ -46,7 +46,7 @@
             display: -ms-flexbox
             display: flex
             -ms-flex-wrap: wrap
-            flex-wrap: wrap
+            flex-wrap: nowrap
             justify-content: center
             .col
                 float: initial
@@ -142,7 +142,7 @@
                     padding: 0% 2%
                     div
                         display: table-cell
-                        height: 250px
+                        height: 100%
                         vertical-align: middle
                         img
                             text-align: center
