--- a/resources/assets/sass/components/home/_info.sass
+++ b/resources/assets/sass/components/home/_info.sass
@@ -17,7 +17,7 @@
                 padding: 0% 10%
                 div
                     display: table-cell
-                    height: 150px
+                    height: 100%
                     vertical-align: middle
                     @media screen and (max-width: 600px)
                         height: 100px
